# saveme-app

./: App.jsx  app.json  index.js  package-lock.json  package.json
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  google-services.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/models/: gemma-3-1b-it-q4_0.gguf
android/app/src/main/cpp/: CMakeLists.txt  native_llama.cpp
android/app/src/main/java/com/saveme/: MainActivity.kt  MainApplication.kt
android/app/src/main/java/com/saveme/ai/: GemmaModule.kt  GemmaPackage.kt  NativeLlama.kt
components/: BottomTab.jsx  Header.jsx  InboxList.jsx  PaginationDot.jsx  Services.jsx  SosBtn.jsx
ios/: Podfile
ios/SaveMe/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/SaveMe.xcodeproj/: project.pbxproj
ios/SaveMe.xcodeproj/xcshareddata/xcschemes/: SaveMe.xcscheme
ios/SaveMeTests/: SaveMeTests.m
screens/: AiHelpScreen.jsx  Home.jsx  LandScreen.jsx  Map.jsx  Messages.jsx  Profile.jsx
screens/auth/: CustomInput.jsx  Login.jsx  SignUp.jsx
screens/auth/api/: api.js
screens/auth/style/: Signup.jsx
screens/style/: Home.jsx  LandScreen.jsx  MapStyle.jsx  MessagesStyle.jsx  ProfileStyle.jsx
src/ai/: llama.js
src/config/: mapbox.js
src/service/: aiModel.js  auth.js  ensureModel.js  gemma.js  gemma.ts  googleAuth.js
src/utils/: prepareModel.js
